[package]
name = "select"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
perf-test = []

[profile.release]
opt-level = 3
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true

# [profile.test]
# opt-level = 3
# debug = true
# split-debuginfo = '...'  # Platform-specific.
# debug-assertions = false
# overflow-checks = false
# lto = true

[dependencies]
