[package]
name = "turboselect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = { version = "0.2.7", optional = true }

[dev-dependencies]
colored = "2.0.4"

[features]
default = ["std"]
std = []

[profile.release]
opt-level = 3
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
